--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "source-map-explorer": "^1.6.0"
   },
   "devDependencies": {
-    "react-scripts": "2.0.3"
+    "react-scripts": "^3.3.1"
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
