--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "source-map-explorer": "^1.6.0"
   },
   "devDependencies": {
+    "prettier": "^1.19.1",
     "react-scripts": "^3.3.1"
   },
   "scripts": {
